# platform-seeedboards

./: .gitignore  README.md  claude.md  platform.json  platform.py
.github/workflows/: build-arduino-examples.yml  build-examples.yml  build-zephyr-examples.yml  update-zephyr-version.yml
boards/: seeed-xiao-esp32-c3.json  seeed-xiao-esp32-c5.json  seeed-xiao-esp32-s3-sense.json  seeed-xiao-mg24-sense.json  seeed-xiao-nrf54l15-sense.json  seeed-xiao-nrf54l15.json  seeed-xiao-nrf54lm20.json  seeed-xiao-nrf54lm20a.json  seeed-xiao-nrf54lm20b.json
builder/frameworks/: arduino.py  espidf.py  zephyr.py
examples/arduino-blink/: platformio.ini
examples/arduino-rmt-blink/: platformio.ini
examples/arduino-usb-keyboard/: platformio.ini
examples/arduino-wifiscan/: platformio.ini
examples/zephyr-adc/: README.md  platformio.ini
examples/zephyr-battery/: README.md
examples/zephyr-ble/: README.md  platformio.ini
examples/zephyr-blink/: README.md  platformio.ini
examples/zephyr-button/: README.md
examples/zephyr-edge-impulse/zephyr/: CMakeLists.txt  Kconfig  pm_static_xiao_nrf54l15_nrf54l15_cpuapp.yml  prj.conf
examples/zephyr-edge-impulse/zephyr/boards/: pm_static_xiao_nrf54l15_nrf54l15_cpuapp.yml  xiao_nrf54l15_nrf54l15_cpuapp.conf
examples/zephyr-edge-impulse/zephyr/sysbuild/: mcuboot.conf  mcuboot.overlay
examples/zephyr-edge-impulse/zephyr/sysbuild/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
platform_cfg/: esp_cfg.py  nrf_cfg.py  rpi_cfg.py  siliconlab_cfg.py
(+235 files in other folders)
